[package]
name = "phantom-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.10"
clokwerk = "0.3.5"
cron = "0.9.0"
chrono = "0.4.19"
toml = "0.5"
serde_derive = "1.0.136"
serde = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }